--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
     flex-direction: column;
     align-content: center;
     text-align: center;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     height: 100vh;
@@ -72,7 +72,47 @@ main {
     margin-left: 20%;
 }
 
-#introductionSection {
-    width: 100%;
+.textContainer {
+    background-color: rgba(100, 100, 100, 0.3);
+    margin: 10px;
+    border-radius: 10px;
     text-align: left;
+    padding: 20px;
+}
+
+/* introduction section */
+
+#introduction {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+
+}
+
+/* class section */
+
+#classSelection {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+#containerForClasses {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.classContainer {
+    background-color: rgba(100, 100, 100, 0.3);
+    width: 20vw;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.classContainer img{
+    align-self: center;
+    height: 50vh;
+    margin-top: 10%;
 }
